Remove assemblies profile