@@ -631,148 +631,6 @@
 		</profile>
 
 		<profile>
-			<id>assemblies</id>
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>${maven.exec.version}</version>
-						<executions>
-							<execution>
-								<id>jlink</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>${java.home}/bin/jlink</executable>
-									<arguments>
-										<argument>--module-path</argument>
-										<argument>${jlink.module.path}</argument>
-										<argument>--add-modules</argument>
-										<argument>com.avereon.xenon</argument>
-										<argument>--output</argument>
-										<argument>${basedir}/target/jlink</argument>
-										<argument>--launcher</argument>
-										<argument>xenon=com.avereon.xenon/com.avereon.xenon.Launcher</argument>
-										<argument>--ignore-signing-information</argument>
-										<argument>--no-header-files</argument>
-										<argument>--no-man-pages</argument>
-										<argument>--strip-debug</argument>
-										<argument>--compress</argument>
-										<argument>2</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<!-- Assemble the product pack -->
-							<execution>
-								<id>assembly-product</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<finalName>product</finalName>
-									<descriptorRefs>
-										<descriptorRef>product-${product.platform}</descriptorRef>
-									</descriptorRefs>
-									<ignoreMissingDescriptor>true</ignoreMissingDescriptor>
-								</configuration>
-							</execution>
-							<!-- Assemble the installer files -->
-							<execution>
-								<id>assembly-install</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<attach>false</attach>
-									<finalName>${product-pack-folder}</finalName>
-									<descriptorRefs>
-										<descriptorRef>install-${product.platform}</descriptorRef>
-									</descriptorRefs>
-									<appendAssemblyId>false</appendAssemblyId>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Copy extra installer resources -->
-					<plugin>
-						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-izpack-resources</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/izpack</directory>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/main/izpack</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
-								<id>copy-izpack-resources-filter</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/izpack</directory>
-											<filtering>true</filtering>
-											<excludes>
-												<exclude>bin</exclude>
-											</excludes>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/main/izpack</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
-								<id>copy-platform-resources</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/pack/${product.platform}</directory>
-											<excludes>
-												<exclude>bin</exclude>
-											</excludes>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/pack/${product.platform}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
 			<id>packs</id>
 			<build>
 				<plugins>
